--- a/python_101_exercises.ipynb
+++ b/python_101_exercises.ipynb
@@ -3410,6 +3410,135 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 62\n",
+    "# Write a function definition named median that takes in sequence of numbers and returns the average value\n",
+    "\n",
+    "def median(num):\n",
+    "    num.sort()\n",
+    "    median = len(num) // 2\n",
+    "    return (num[median] + num[~median]) / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "median([1, 2, 5, 6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 63\n",
+    "# Write a function definition named mode that takes in sequence of numbers and returns the most commonly occuring value\n",
+    "\n",
+    "def mode(num):\n",
+    "    max_count = (0, 0)\n",
+    "    for x in num:\n",
+    "        occurs = num.count(x)\n",
+    "        if occurs > max_count[0]:\n",
+    "            max_count = (occurs, x)\n",
+    "    return max_count[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mode([1, 2, 2, 3, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mode([2, 2, 3, 3, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 64\n",
+    "# Write a function definition named product_of_all that takes in sequence of numbers and returns the product of multiplying all the numbers together\n",
+    "\n",
+    "def product_of_all(num):\n",
+    "    total = 1\n",
+    "    for x in num:\n",
+    "        total *= x\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "product_of_all([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
