seventy-seven through eighty

--- a/python_101_exercises.ipynb
+++ b/python_101_exercises.ipynb
@@ -3995,6 +3995,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 77\n",
+    "# Write a function definition named only_positive_evens that takes in sequence of numbers and returns a list containing all the positive evens from the sequence\n",
+    "\n",
+    "def only_positive_evens(seq):\n",
+    "    return list([num for num in seq if (num > 0 and num % 2 == 0)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "only_positive_evens([2, -5, -6])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
