eighty-five through eighty-eight

--- a/python_101_exercises.ipynb
+++ b/python_101_exercises.ipynb
@@ -4299,6 +4299,173 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 85\n",
+    "# Write a function definition named get_values_in_common that takes two lists and returns a single set with the values that each list has in common\n",
+    "\n",
+    "def get_values_in_common(list1, list2):\n",
+    "    return (set(list1).intersection(list2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_values_in_common([1, 2], [2, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tomato'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_values_in_common([\"tomato\", \"mango\", \"kiwi\"], [\"eggplant\", \"tomato\", \"broccoli\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1 = [5, 1, 2, 3] \n",
+    "list2 = [3, 4, 5, 5]\n",
+    "\n",
+    "(set(list1).difference(list2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 86\n",
+    "# Write a function definition named get_values_not_in_common that takes two lists and returns a single set with the values that each list does not have in common\n",
+    "\n",
+    "def get_values_not_in_common(list1, list2):\n",
+    "    return (set(list1).symmetric_difference(list2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 4}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_values_not_in_common([5, 1, 2, 3], [3, 4, 5, 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 4}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = {5, 1, 2, 3}\n",
+    "b = {3, 4, 5, 5}\n",
+    "\n",
+    "set(a ^ b) # apparently, the ^ operator only works with SETS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this cell in order to have these two dictionary variables defined.\n",
+    "tukey_paper = {\n",
+    "    \"title\": \"The Future of Data Analysis\",\n",
+    "    \"author\": \"John W. Tukey\",\n",
+    "    \"link\": \"https://projecteuclid.org/euclid.aoms/1177704711\",\n",
+    "    \"year_published\": 1962\n",
+    "}\n",
+    "\n",
+    "thomas_paper = {\n",
+    "    \"title\": \"A mathematical model of glutathione metabolism\",\n",
+    "    \"author\": \"Rachel Thomas\",\n",
+    "    \"link\": \"https://www.ncbi.nlm.nih.gov/pubmed/18442411\",\n",
+    "    \"year_published\": 2008\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 87\n",
+    "# Write a function named get_paper_title that takes in a dictionary and returns the title property\n",
+    "\n",
+    "def get_paper_title(dict):\n",
+    "    return dict[\"title\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
