eighty-nine through ninety-one

--- a/python_101_exercises.ipynb
+++ b/python_101_exercises.ipynb
@@ -4466,6 +4466,203 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The Future of Data Analysis'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_paper_title(tukey_paper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 88\n",
+    "# Write a function named get_year_published that takes in a dictionary and returns the value behind the \"year_published\" key.\n",
+    "\n",
+    "def get_year_published(dict):\n",
+    "    return dict[\"year_published\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2008"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_year_published(thomas_paper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this code to create data for the next two questions\n",
+    "book = {\n",
+    "    \"title\": \"Genetic Algorithms and Machine Learning for Programmers\",\n",
+    "    \"price\": 36.99,\n",
+    "    \"author\": \"Frances Buontempo\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 89\n",
+    "# Write a function named get_price that takes in a dictionary and returns the price\n",
+    "\n",
+    "def get_price(dict):\n",
+    "    return dict[\"price\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.99"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_price(book)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 90\n",
+    "# Write a function named get_book_author that takes in a dictionary (the above declared book variable) and returns the author's name\n",
+    "\n",
+    "def get_book_author(dict):\n",
+    "    return dict[\"author\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Frances Buontempo'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_book_author(book)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this cell in order to have some setup data for the next exercises\n",
+    "books = [\n",
+    "    {\n",
+    "        \"title\": \"Genetic Algorithms and Machine Learning for Programmers\",\n",
+    "        \"price\": 36.99,\n",
+    "        \"author\": \"Frances Buontempo\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"title\": \"The Visual Display of Quantitative Information\",\n",
+    "        \"price\": 38.00,\n",
+    "        \"author\": \"Edward Tufte\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"title\": \"Practical Object-Oriented Design\",\n",
+    "        \"author\": \"Sandi Metz\",\n",
+    "        \"price\": 30.47\n",
+    "    },\n",
+    "    {\n",
+    "        \"title\": \"Weapons of Math Destruction\",\n",
+    "        \"author\": \"Cathy O'Neil\",\n",
+    "        \"price\": 17.44\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 91\n",
+    "# Write a function named get_number_of_books that takes in a list of objects and returns the number of dictionaries in that list.\n",
+    "\n",
+    "def get_number_of_books(dict):\n",
+    "    return len(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_number_of_books(books)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
