ninety-four and ninety-five

--- a/python_101_exercises.ipynb
+++ b/python_101_exercises.ipynb
@@ -4599,7 +4599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4755,6 +4755,174 @@
    ],
    "source": [
     "get_average_book_price(books)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "price_list = []\n",
+    "\n",
+    "for book in books:\n",
+    "    price_list.append(book[\"price\"])\n",
+    "    max_price = max(price_list)\n",
+    "print(max_price)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'title': 'The Visual Display of Quantitative Information', 'price': 38.0, 'author': 'Edward Tufte'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for book in books:\n",
+    "    if book[\"price\"] == max_price:\n",
+    "        print(book)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 94\n",
+    "# Write a function called highest_price_book that takes in the above defined list of dictionaries \"books\" and returns the dictionary containing the title, price, and author of the book with the highest priced book.\n",
+    "# Hint: Much like sometimes start functions with a variable set to zero, you may want to create a dictionary with the price set to zero to compare to each dictionary's price in the list\n",
+    "\n",
+    "def highest_price_book(dict):\n",
+    "    price_list = []\n",
+    "\n",
+    "    for book in dict:\n",
+    "        price_list.append(book[\"price\"])\n",
+    "        max_price = max(price_list)\n",
+    "    for book in books:\n",
+    "        if book[\"price\"] == max_price:\n",
+    "            return book "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': 'The Visual Display of Quantitative Information',\n",
+       " 'price': 38.0,\n",
+       " 'author': 'Edward Tufte'}"
+      ]
+     },
+     "execution_count": 331,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "highest_price_book(books)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "price_list = []\n",
+    "\n",
+    "for book in books:\n",
+    "    price_list.append(book[\"price\"])\n",
+    "    min_price = min(price_list)\n",
+    "print(min_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'title': 'Weapons of Math Destruction', 'author': \"Cathy O'Neil\", 'price': 17.44}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for book in books:\n",
+    "    if book[\"price\"] == min_price:\n",
+    "        print(book)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 95\n",
+    "# Write a function called lowest_priced_book that takes in the above defined list of dictionaries \"books\" and returns the dictionary containing the title, price, and author of the book with the lowest priced book.\n",
+    "# Hint: Much like sometimes start functions with a variable set to zero or float('inf'), you may want to create a dictionary with the price set to float('inf') to compare to each dictionary in the list\n",
+    "\n",
+    "def lowest_priced_book(dict):\n",
+    "    price_list = []\n",
+    "\n",
+    "    for book in dict:\n",
+    "        price_list.append(book[\"price\"])\n",
+    "        min_price = min(price_list)\n",
+    "    for book in books:\n",
+    "        if book[\"price\"] == min_price:\n",
+    "            return book "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': 'Weapons of Math Destruction',\n",
+       " 'author': \"Cathy O'Neil\",\n",
+       " 'price': 17.44}"
+      ]
+     },
+     "execution_count": 340,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lowest_priced_book(books)"
    ]
   },
   {
