--- a/python_101_exercises.ipynb
+++ b/python_101_exercises.ipynb
@@ -5073,6 +5073,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-288-945abb4ccf7d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mshopping_cart\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"items\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"quantity\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
+   "source": [
+    "shopping_cart[\"items\"][\"quantity\"].items()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 283,
    "metadata": {},
    "outputs": [
@@ -5129,10 +5150,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 294,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'orange juice', 'price': 3.99, 'quantity': 1},\n",
+       " {'title': 'rice', 'price': 1.99, 'quantity': 3},\n",
+       " {'title': 'beans', 'price': 0.99, 'quantity': 3},\n",
+       " {'title': 'chili sauce', 'price': 2.99, 'quantity': 1},\n",
+       " {'title': 'chocolate', 'price': 0.75, 'quantity': 9}]"
+      ]
+     },
+     "execution_count": 294,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This is a list.\n",
+    "\n",
+    "shopping_cart['items']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': 'orange juice', 'price': 3.99, 'quantity': 1}"
+      ]
+     },
+     "execution_count": 295,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This is the first dictionary\n",
+    "\n",
+    "shopping_cart['items'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for item in shopping_cart:\n",
+    "    i = range(1,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Back into a dictionary\n",
+    "\n",
+    "shopping_cart['items'][0]['quantity']"
+   ]
   }
  ],
  "metadata": {
